# tamandua-gui

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  index.html  install_deps.ps1  package.json  run_gui.bat  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.storybook/: main.ts  preview.ts
scripts/: build-tauri.mjs  build-windows-bundle.ps1  check-tauri-prereqs.ps1  fetch-agent.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.bundle.windows.conf.json  tauri.conf.json  tauri.posix.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  schedule.rs  state.rs  tray.rs
src-tauri/src/auth/: audit.rs  biometric.rs  credential_store.rs  mod.rs  password.rs  session.rs
src-tauri/src/ipc/: auth.rs  client.rs  mod.rs  protocol.rs
src-tauri/tests/: auth_integration_tests.rs
src/components/: ConfirmDialog.tsx  EventDetails.tsx  EventFilters.tsx  EventTimeline.tsx  FalsePositiveReport.tsx  FeatureComparison.tsx  Layout.tsx  LicenseActivation.tsx  LicenseStatus.tsx  RuleQualityDashboard.tsx  Skeleton.tsx  Toast.tsx  TuningRecommendations.tsx
src/components/auth/: index.ts  (+8 more)
src/context/: AuthContext.tsx
src/hooks/: useAuth.ts  useEvents.ts  useExclusions.ts  useFileBrowser.ts  useLicense.ts  useLogs.ts  useMitre.ts  useNetwork.ts  useNotifications.ts  usePerformance.ts  useProcesses.ts  useProfile.ts  useQuarantine.ts  useQuickActions.ts  useResponseActions.ts  useSchedules.ts  useTauri.ts  useThreatIntel.ts
src/lib/: core-types.ts  privileges.ts  types.ts  utils.ts
src/pages/: AgentSetup.tsx  Alerts.tsx  Community.tsx  Dashboard.tsx  EventHistory.tsx  Exclusions.tsx  Files.tsx  IncidentDetail.tsx  License.tsx  Logs.tsx  MitreAttack.tsx  Network.tsx  Performance.tsx  ProcessExplorer.tsx  Quarantine.tsx  ResponseHistory.tsx  Scan.tsx  ScheduledScans.tsx  Security.stories.tsx  Security.tsx  Settings.tsx  ThreatIntel.tsx  Updates.tsx
src/styles/: globals.css  tokens.css
src/test/: setup.ts
src/utils/: dateUtils.ts
(+108 files in other folders)
